tests/samples/failing/06_assign_type_mismatch.mlang
fn main() {
    let mut flag = true;
    flag = 1;
}
